--- a/css/index.css
+++ b/css/index.css
@@ -156,11 +156,11 @@ header nav a:last-child {
   margin-right: 0;
 }
 header nav a:hover {
-  color: #8F928F;
+  color: lightgrey;
 }
 .jumbotron {
   display: flex;
-  background: #8F928F;
+  background: lightgrey;
   border-radius: 1%;
   padding: 1rem;
   max-height: 60vh;
@@ -185,4 +185,50 @@ header nav a:hover {
 }
 .jumbotron .jumbo-heading p {
   font-size: 3rem;
+}
+.main-content {
+  margin: 20px 0;
+  display: flex;
+}
+.main-content div {
+  width: 50%;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+.main-content div h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+.main-content div ul {
+  border: 1px solid lightgrey;
+  border-radius: 1%;
+}
+.main-content div li {
+  border-bottom: 1px solid lightgrey;
+  padding: 20px;
+}
+.main-content div p {
+  line-height: 1.5;
+}
+.work-history h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+.work-history table {
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+  font-size: 1.5rem;
+  width: 100%;
+  height: 30vh;
+  text-align: center;
+}
+.work-history table tr:nth-child(even) {
+  background: lightgrey;
+}
+.work-history table tr th {
+  font-weight: bolder;
+  padding-top: 10px;
+}
+.work-history table tr td {
+  padding-top: 10px;
 }
